# energy-pandas

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: main.yml  python-package.yml
docs/: conf.py  index.rst  reference.rst
energy_pandas/: __init__.py  edf_utils.py  energypandas.py  energyplus_en.txt  plotting.py  units.py
tests/: test_energypandas.py
