[tool.poetry]
name = "energy_pandas"
version = "0.4.1"
description = "Building Energy pandas extension"
authors = ["Samuel Letellier-Duchesne <fsamuelduchesne@me.com>"]
repository = "https://github.com/samuelduchesne/energy-pandas"
documentation = "https://samuelduchesne.github.io/energy-pandas/"
readme = "README.md"
packages = [
  {include = "energy_pandas"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
numpy = [
    {version = "^2.0.2", python = "<=3.9"},
    {version = "^2.1.1", python = "3.10"}
]
tabulate = "^0.9.0"
pint = "^0.24.3"
outdated = "^0.2.2"
tsam = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["energy_pandas"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Too Complex
    "C901"
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["energy_pandas"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
